Fix double scrollbar bug

--- a/themes/hugo-theme-ephemeralenvironments/static/css/base.css
+++ b/themes/hugo-theme-ephemeralenvironments/static/css/base.css
@@ -947,14 +947,14 @@ a.muted:active {
     overflow-x: scroll;
     background: -webkit-linear-gradient(
       left,
-      rgba(173, 183, 191, 0) 0,
-      rgba(173, 183, 191, 0.2) 100%
-    );
-    background: linear-gradient(
-      to right,
-      rgba(173, 183, 191, 0) 0,
-      rgba(173, 183, 191, 0.2) 100%
-    );
+        rgba(173, 183, 191, 0) 0,
+        rgba(173, 183, 191, 0.2) 100%
+        );
+        background: linear-gradient(
+          to right,
+        rgba(173, 183, 191, 0) 0,
+        rgba(173, 183, 191, 0.2) 100%
+        );
     background-size: 10px 100%;
     background-position: right;
     background-repeat: no-repeat;
@@ -1027,7 +1027,8 @@ a.muted:active {
 #twtr-scroll {
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: scroll;
+  scrollbar-width: none;
   -webkit-overflow-scrolling: touch;
 }
 
@@ -1074,7 +1075,6 @@ a.muted:active {
   }
   #twtr-content {
     width: 2000px !important;
-    overflow: auto;
   }
   .twtr-card {
     width: 360px;
@@ -1166,18 +1166,18 @@ a.muted:active {
 }
 
 .subscription-form fieldset {
-    font-size: 1em;
-    padding: 0.5em;
-    border-radius: 1em;
-    margin-bottom: 20%;
-    margin-top: 40%;
-    margin-left: 40%;
+  font-size: 1em;
+  padding: 0.5em;
+  border-radius: 1em;
+  margin-bottom: 20%;
+  margin-top: 40%;
+  margin-left: 40%;
 }
 
 .subscription-form label, input, button {
-    font-size: inherit;
-    margin: 0.1em 0.2em;
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box;
-    box-sizing: content-box;
+  font-size: inherit;
+  margin: 0.1em 0.2em;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
 }
